--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <div class="main-container">
+        <nav class="premium-nav">
+    <div class="nav-logo">
+        <img src="assets/icons/moto-logo.svg" alt="Performance Lab">
+    </div>
+    <div class="nav-links">
+        <a href="#models" class="nav-item active">Models</a>
+        <a href="#performance" class="nav-item">Performance</a>
+        <a href="#upgrades" class="nav-item">Upgrades</a>
+        <a href="#dyno" class="nav-item">Dyno</a>
+    </div>
+    <div class="nav-actions">
+        <button class="theme-toggle">🌙</button>
+        <button class="premium-btn">Upgrade Now</button>
+    </div>
+</nav>
         <div class="webgl-container">
             <canvas id="motorcycle-canvas"></canvas>
             <div class="performance-overlay"></div>
