--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/postprocessing@6.29.3/build/postprocessing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+<script src="scripts/bike-data.js"></script>
+<script src="scripts/model-viewer.js"></script>
+<script src="scripts/performance-graph.js"></script>
+<script src="scripts/ui-controller.js"></script>
+<script src="scripts/shaders.js"></script>
+<script src="scripts/particle-system.js"></script>
+<script src="scripts/physics-engine.js"></script>
+<script src="scripts/performance-mapper.js"></script>
+<script src="scripts/advanced-systems.js"></script>
+<script src="scripts/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/postprocessing@6.29.3/build/postprocessing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
