--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="nav-actions">
             <button class="theme-toggle">🌙</button>
-            <button class="premium-btn">Go Premium</button>
+            <button class="premium-btn">Connor M</button>
         </div>
     </nav>
 
